basic map generation and client-server communication

--- a/static/index.html
+++ b/static/index.html
@@ -3,8 +3,18 @@
 	<head>
 		<meta charset="utf-8">
 		<title>LD36</title>
+		<style>
+			body{
+				margin: 0px;
+			}
+			canvas{
+				background: black;
+				display: block;
+			}
+		</style>
 	</head>
 	<body>
+		<script src="/socket.io/socket.io.js"></script>
 		<script src="build/bundle.js"></script>
 	</body>
 </html>
