--- a/static/index.html
+++ b/static/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>LD36</title>
+		<title>Flamethrowing Dynamite Wizards on Ice</title>
 		<style>
 			body{
 				margin: 0px;
